# llm.fyi

./: .gitignore  .llm.fyi  Makefile  README.md  requirements.txt  setup.cfg  setup.py
src/: dotfile.py  llmfyi.py
src/llmfyi/: __init__.py  main.py
