#  This is a basic python setup.cfg for the llmfyi module.
#  The source code is in the src directory.
#  The author is Justin Donaldson (jdonaldson@gmail.com)
#  The config creates an entrypoint called llm for the llfmyi module
#  There is an extras requires for "dev" that includes pytest

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[entry_points]
console_scripts=
    llm=llmfyi:main

[extras]
dev=
    pytest

