#  This is a basic python setup.cfg for the llmfyi module.
#  The config includes a metadata section
#  The module author in the metadata is Justin Donaldson (jdonaldson@gmail.com)
#  The package code can be found in the src directory.
#  Set the options.packages.find option to the src directory.
#  The module uses the openai library
#  The config creates a console script called llm for llmfyi:main
#  There is an extras requires for "dev" that includes pytest

[metadata]
name = llmfyi
version = 0.1.0
author = Justin Donaldson
author_email = jdonaldson@gmail.com
url = https://github.com/jdonaldson/llmfyi
description = A python module for natural language processing
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    openai

[options.packages.find]
where=src

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    llm = llmfyi:main

