#  This is a basic python setup.cfg for the llmfyi module.
#  The config includes a metadata section
#  The author in the metadata is Justin Donaldson (jdonaldson@gmail.com)
#  The description is "a python module for llm tooling"
#  The package code can be found in the src directory.
#  Set the options.packages.find option to the src directory.
#  The module uses the openai library
#  The config creates a console script called llm for llmfyi:main
#  There is an extras requires for "dev" that includes pytest

[metadata]
name = llmfyi
version = 0.1.0
author = Justin Donaldson
author_email = jdonaldson@gmail.com
description = A python module for llm tooling

[options]
packages = find:
install_requires =
    openai

[options.extras_require]
dev =
    pytest

[entry_points]
console_scripts =
    llm = llmfyi:main

